# blue_gravity

./: .gitignore  README.md
interview_task/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
interview_task/content_platform/: admin.py  apps.py  models.py  schema_data.py  serializers.py  tests.py  urls.py  views.py
interview_task/content_platform/migrations/: 0001_initial.py  0002_remove_content_created_at_rating.py  0003_alter_rating_rating.py
interview_task/interview_task/: asgi.py  settings.py  urls.py  wsgi.py
