[tool.poetry]
name = "interview-task"
version = "0.1.0"
description = ""
authors = ["Anastasia Vakhrusheva <aaselezneva9@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "3.8.1"
attrs = "24.2.0"
black = "24.8.0"
click = "8.1.7"
django = "5.1"
django-filter = "24.3"
djangorestframework = "3.15.2"
djangorestframework-simplejwt = "5.3.1"
drf-spectacular = "0.27.2"
environs = "11.0.0"
inflection = "0.5.1"
jsonschema = "4.23.0"
jsonschema-specifications = "2023.12.1"
marshmallow = "3.22.0"
mypy-extensions = "1.0.0"
packaging = "24.1"
pathspec = "0.12.1"
platformdirs = "4.2.2"
psycopg2-binary = "2.9.9"
pyjwt = "2.9.0"
python-dotenv = "1.0.1"
pyyaml = "6.0.2"
referencing = "0.35.1"
rpds-py = "0.20.0"
sqlparse = "0.5.1"
uritemplate = "4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
